# dal-keystore

./: CMakeLists.txt  Makefile  README.md
keystore_applet/: .LICENSE.swp  CMakeLists.txt  Keystore.dalp
keystore_daemon/: CMakeLists.txt  README
keystore_daemon/inc/: base64.h
keystore_daemon/script/: dal_ks_initd.conf  dal_ks_initd.sh
keystore_daemon/src/: base64.cpp  dal_ks_init.cpp
keystore_daemon/src/dal-tool/: DAL-Tool.cpp
keystore_lib/: CMakeLists.txt  Makefile
keystore_lib/doc/: 01_icd.md  02_changes.md  11_interface_ias_keystore.md  12_interface_IasKeystoreLib.md  21_examples.md  31_configuration.md
keystore_lib/inc/: IasKeystoreLib.hpp  ias_keystore.h  keystore_api_common.h  keystore_api_user.h  ks_smoke.h  ksutil.hpp
keystore_lib/src/lib/: IasKeystoreLib.cpp  ias_keystore.c
keystore_lib/src/util/: ks_smoke.c  ksutil.cpp
keystore_lib/test/: ksutil-encrypt.sh  ksutil-encrypt2.sh
test/: README  ksutil-wrap.sh
test/install/: README  dal_ks_initd.conf
